# Proxer_to_MAL_Import

./: LICENSE.md  README.md  main.py  pyproject.toml
data/: anime_dic.txt  anime_dic_with_id.txt  anime_list.txt  anime_list_html.txt  anime_not_found.txt  mal_import.xml  pickle_file.txt  ratings_raw.txt  template.xml
scripts/: anime_list_parse.py  mal_xml_parser.py  rating_parser.py
