[tool.poetry]
name = "proxertomalimport"
version = "0.1.0"
description = ""
authors = ["MrEMU <fabian.endter@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
