[tool.poetry]
name = "proxertomalimport"
version = "0.2.0"
description = "Parses the html code of a Proxer.me anime watchlist to a MyAnimeList import xml file."
authors = ["MrEMU <fabian.endter@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^4.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
